[gd_scene load_steps=11 format=2]

[ext_resource path="res://Graphics/sky.png" type="Texture" id=1]
[ext_resource path="res://Fonts/RedeemGold/RedeemGold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Help.gd" type="Script" id=3]
[ext_resource path="res://Sprites/help box/help box1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/help box/help box2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/help box/help box3.png" type="Texture" id=6]
[ext_resource path="res://Credits.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sprites/help box/help box4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/help box/help box5.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Help" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="LinkButton" parent="."]
margin_left = 450.0
margin_top = 516.0
margin_right = 574.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.8, 0.619608, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.360784, 0, 1 )
text = "Back"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton2" type="LinkButton" parent="."]
margin_left = 64.0
margin_top = 516.0
margin_right = 100.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.8, 0.619608, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.360784, 0, 1 )
text = "<="
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton3" type="LinkButton" parent="."]
margin_left = 924.0
margin_top = 516.0
margin_right = 960.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.8, 0.619608, 1 )
custom_colors/font_color_pressed = Color( 0.768627, 0.360784, 0, 1 )
text = "=>"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="ReferenceRect"]
margin_left = 64.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 114.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="ReferenceRect"]
margin_left = 64.0
margin_top = 196.0
margin_right = 192.0
margin_bottom = 246.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="ReferenceRect"]
margin_left = 448.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 484.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0.768627, 0.360784, 0, 1 )
text = "Cats love that fishy smell. Use fish to lure a cat to a tasty treat.



But be warned, who knows how long it will take to chew this fat."

[node name="TextureRect3" type="TextureRect" parent="ReferenceRect"]
margin_left = 1088.0
margin_top = 64.0
margin_right = 1216.0
margin_bottom = 114.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="ReferenceRect"]
margin_left = 1088.0
margin_top = 196.0
margin_right = 1216.0
margin_bottom = 246.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="ReferenceRect"]
margin_left = 1472.0
margin_top = 64.0
margin_right = 1984.0
margin_bottom = 484.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0.768627, 0.360784, 0, 1 )
text = "Cats are truly terrified of cucumbers. 




Place one near it and watch it run in the opposite direction."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="ReferenceRect"]
margin_left = 2112.0
margin_top = 64.0
margin_right = 2240.0
margin_bottom = 114.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="ReferenceRect"]
margin_left = 2496.0
margin_top = 64.0
margin_right = 3008.0
margin_bottom = 484.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0.768627, 0.360784, 0, 1 )
text = "However, cats are fickle creatures. There is always the slight possibility
that they'll ignore what's in front of them. Such is the carfree life of a cat."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="LinkButton2" to="." method="_on_LinkButton2_pressed"]
[connection signal="pressed" from="LinkButton3" to="." method="_on_LinkButton3_pressed"]
